package projectEncryption;

import java.io.File;

public class main {

        public static void main(String[] args)
        {
            new UI();
        }


}
