@startuml

title __ENCRYPTIONPROJECT's Class Diagram__\n

  namespace projectEncryption {
    abstract class projectEncryption.Algorithem {
    }
  }
  

  namespace projectEncryption {
    interface projectEncryption.AlgorithemModel {
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.EulerPhiToitenEncryption {
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.HammiltonCircuitEncryption {
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.Modulo10Encryption {
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.SudokuEncryption {
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.UI {
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.main {
    }
  }
  

  projectEncryption.Algorithem .up.|> projectEncryption.AlgorithemModel
  projectEncryption.EulerPhiToitenEncryption -up-|> projectEncryption.Algorithem
  projectEncryption.HammiltonCircuitEncryption -up-|> projectEncryption.Algorithem
  projectEncryption.Modulo10Encryption -up-|> projectEncryption.Algorithem
  projectEncryption.SudokuEncryption -up-|> projectEncryption.Algorithem
  projectEncryption.UI -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
